sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: ';' expected but '(' found.
{var lm : getValeur(i);
                   ^AlgInsertionSort:8: error: identifier expected but integer literal found.
if( tab[j-1] > elem)
          ^AlgInsertionSort:12: error: ']' expected but '}' found.
}
^