sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

var i : Int =0;
for (i <- 0 to getNombreValeurs())
{var lm : getValeur(i);
for(j<-i to 0 by -1)
if( tab[j-1] > elem)
getValeur(j) = getValeur(j-1);
getValeur(j)= lm;

}
}
